# glad-meson-patch

./: .gitignore  LICENSE  README.build.md  README.md  generate.bat  generate.sh  glad.wrap.template  meson.build  meson_options.txt  test.Dockerfile
.github/: glad-meson-patch.yml
.github/workflows/: glad-meson-patch.yml  test.yml
